# ESP32-P4_E-Contest_Template

./: .clangd  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
.claude/: settings.local.json
components/espressif__esp32_p4_function_ev_board_noglib/: CMakeLists.txt  Kconfig  esp32_p4_function_ev_board.c  idf_component.yml
components/espressif__esp32_p4_function_ev_board_noglib/include/bsp/: esp32_p4_function_ev_board.h
components/espressif__esp_lvgl_adapter/: .component_hash  CHECKSUMS.json  idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  dds_direct_link.cpp  dds_direct_link.h  esp_recon.cpp  esp_recon.h  idf_component.yml  spilink.cpp  spilink.h
main/storage/: template_sdcard.c  template_sdcard.h
main/ui/: heavyfit.cpp  heavyfit.h  test_dds_spi.cpp  test_dds_spi.h  test_screen.cpp  test_screen.h
main/wifi/: template_wifi.c  template_wifi.h
